<resources>
    <string name="app_name">SMK: Routine Service Deliver</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="healthfacilityinformation_mainheading">HEALTH FACILITY INFORMATION: </string>
    <string name="maternalhealthregister_mainheading">Maternal Health Register: </string>
    <string name="epihealthregister_mainheading">EPI Health Register: </string>
    <string name="secondaryhealthcarefacilitiesobgynopdregister_mainheading">Secondary health care facilities- Ob/Gyn OPD register: </string>
    <string name="obstetricregister_mainheading">Obstetric Register: </string>
    <string name="familyplanningregister_mainheading">Family Planning Register: </string>
    <string name="collectthroughstickersnewvariablesindhis_mainheading">Collect through Stickers new variables in DHIS: </string>
    <string name="stockoutregisters_mainheading">Stock Out Registers: </string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="btnDownload">Download Data</string>
    <string name="Q_status">status</string>
    <string name="status"> Interview Status </string>
    <string name="statusa"> Complete </string>
    <string name="statusb"> Incomplete </string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="hfinfo">HEALTH FACILITY INFORMATION</string>
    <string name="distname">Name of District</string>
    <string name="distcode">District Code</string>
    <string name="facilityname">Name of Health Facility</string>
    <string name="facilitycode">Health Facility Code</string>
    <string name="reportingdate"> Reporting Date </string>
    <string name="reportingmonth"> Month </string>
    <string name="reportingyear"> Year </string>
    <string name="secone">Maternal Health Register</string>
    <string name="mhr01">Number of ANC – 1 visit</string>
    <string name="mhr01a">Number of ANC – 1 visit</string>
    <string name="mhr01b">Not Reported</string>
    <string name="mhr02">Number of ANC Revisits (2/3/4 or more)</string>
    <string name="mhr02a">Number of ANC Revisits (2/3/4 or more)</string>
    <string name="mhr02b">Not Reported</string>
    <string name="mhr03">ANC-1 women with Hb &lt;10 g/dl</string>
    <string name="mhr03a">ANC-1 women with Hb &lt;10 g/dl</string>
    <string name="mhr03b">Not Reported</string>
    <string name="mhr04">Number of PNC-1 visits</string>
    <string name="mhr04a">Number of PNC-1 visits</string>
    <string name="mhr04b">Not Reported</string>
    <string name="mhr05">Number of PNC-2 visits</string>
    <string name="mhr05a">Number of PNC-2 visits</string>
    <string name="mhr05b">Not Reported</string>
    <string name="sectwo">EPI Health Register</string>
    <string name="epi01">Women given TT-2 vaccination (advice)</string>
    <string name="epi01a">Women given TT-2 vaccination (advice)</string>
    <string name="epi01b">Not Reported</string>
    <string name="secthree">Secondary healthcare facilities- Ob/Gyn OPD register</string>
    <string name="shf01">Total New Cases OB/GYN</string>
    <string name="shf01a">Total New Cases OB/GYN</string>
    <string name="shf01b">Not Reported</string>
    <string name="shf02">Referred Cases attended (OB/GYN)</string>
    <string name="shf02a">Referred Cases attended (OB/GYN)</string>
    <string name="shf02b">Not Reported</string>
    <string name="secfour">Obstetric Register</string>
    <string name="obs01">Normal Vaginal Delivery</string>
    <string name="obs01a">Normal Vaginal Delivery</string>
    <string name="obs01b">Not Reported</string>
    <string name="obs02">Assisted Vaginal Deliveries</string>
    <string name="obs02a">Assisted Vaginal Deliveries</string>
    <string name="obs02b">Not Reported</string>
    <string name="obs03">Cesarean Sections</string>
    <string name="obs03a">Cesarean Sections</string>
    <string name="obs03b">Not Reported</string>
    <string name="obs04">Postpartum Hemorrhage</string>
    <string name="obs04a">Postpartum Hemorrhage</string>
    <string name="obs04b">Not Reported</string>
    <string name="obs05">Pre-Eclampsia/ Eclampsia</string>
    <string name="obs05a">Pre-Eclampsia/ Eclampsia</string>
    <string name="obs05b">Not Reported</string>
    <string name="obs06">Prolonged Obstructed Labors</string>
    <string name="obs06a">Prolonged Obstructed Labors</string>
    <string name="obs06b">Not Reported</string>
    <string name="obs07">Puerperal Sepsis</string>
    <string name="obs07a">Puerperal Sepsis</string>
    <string name="obs07b">Not Reported</string>
    <string name="obs08">Rupture Uterus</string>
    <string name="obs08a">Rupture Uterus</string>
    <string name="obs08b">Not Reported</string>
    <string name="obs09">Maternal Mortality</string>
    <string name="obs09a">Maternal Mortality</string>
    <string name="obs09b">Not Reported</string>
    <string name="obs10">Number of live births in the facility</string>
    <string name="obs10a">Number of live births in the facility</string>
    <string name="obs10b">Not Reported</string>
    <string name="obs11">Number of live births with LBW</string>
    <string name="obs11a">Number of live births with LBW</string>
    <string name="obs11b">Not Reported</string>
    <string name="obs12">Number of stillbirths in the facility</string>
    <string name="obs12a">Number of stillbirths in the facility</string>
    <string name="obs12b">Not Reported</string>
    <string name="obs13">Number of newborns with birth asphyxia</string>
    <string name="obs13a">Number of newborns with birth asphyxia</string>
    <string name="obs13b">Not Reported</string>
    <string name="obs14">Number of newborns successfully resuscitated</string>
    <string name="obs14a">Number of newborns successfully resuscitated</string>
    <string name="obs14b">Not Reported</string>
    <string name="obs15">Number of women provided misoprostol after delivery.</string>
    <string name="obs15a">Number of women provided misoprostol after delivery.</string>
    <string name="obs15b">Not Reported</string>
    <string name="obs16">Number of newborns to whom chlorhexadine gel is applied to umbilical stumps</string>
    <string name="obs16a">Number of newborns to whom chlorhexadine gel is applied to umbilical stumps</string>
    <string name="obs16b">Not Reported</string>
    <string name="obs17">Prematurity (no. of pre-term births)</string>
    <string name="obs17a">Prematurity (no. of pre-term births)</string>
    <string name="obs17b">Not Reported</string>
    <string name="obs18">Birth trauma</string>
    <string name="obs18a">Birth trauma</string>
    <string name="obs18b">Not Reported</string>
    <string name="obs19">Number of neonatal deaths (28 days)</string>
    <string name="obs19a">Number of neonatal deaths (28 days)</string>
    <string name="obs19b">Not Reported</string>
    <string name="obs20">Number of ultrasounds for ANC</string>
    <string name="obs20a">Number of ultrasounds for ANC</string>
    <string name="obs20b">Not Reported</string>
    <string name="secfive">FP Register</string>
    <string name="fpr01">Total FP Visits</string>
    <string name="fpr01a">Total FP Visits</string>
    <string name="fpr01b">Not Reported</string>
    <string name="fpr02">FP clients receive COC cycles</string>
    <string name="fpr02a">FP clients receive COC cycles</string>
    <string name="fpr02b">Not Reported</string>
    <string name="fpr03">FP clients receive POP cycles</string>
    <string name="fpr03a">FP clients receive POP cycles</string>
    <string name="fpr03b">Not Reported</string>
    <string name="fpr04">FP clients receive DMPA Injectable</string>
    <string name="fpr04a">FP clients receive DMPA Injectable</string>
    <string name="fpr04b">Not Reported</string>
    <string name="fpr05">FP clients receive Net-En Injectable</string>
    <string name="fpr05a">FP clients receive Net-En Injectable</string>
    <string name="fpr05b">Not Reported</string>
    <string name="fpr06">FP clients receive Sayana Press Injectable</string>
    <string name="fpr06a">FP clients receive Sayana Press Injectable</string>
    <string name="fpr06b">Not Reported</string>
    <string name="fpr07">FP clients receive condoms</string>
    <string name="fpr07a">FP clients receive condoms</string>
    <string name="fpr07b">Not Reported</string>
    <string name="fpr08">FP clients receive IUCDs / PPIUCDs</string>
    <string name="fpr08a">FP clients receive IUCDs / PPIUCDs</string>
    <string name="fpr08b">Not Reported</string>
    <string name="fpr09">FP clients receive Implants</string>
    <string name="fpr09a">FP clients receive Implants</string>
    <string name="fpr09b">Not Reported</string>
    <string name="fpr10">FP clients undergo Vasectomy</string>
    <string name="fpr10a">FP clients undergo Vasectomy</string>
    <string name="fpr10b">Not Reported</string>
    <string name="secsix">Collect through Stickers new variables in DHIS</string>
    <string name="cfp01">Clients counsel for FP in Maternal OPD (ANC &amp; PNC)</string>
    <string name="cfp01a">Clients counsel for FP in Maternal OPD (ANC &amp; PNC)</string>
    <string name="cfp01b">Not Reported</string>
    <string name="cfp02">Clients counsel for FP in Peads OPD</string>
    <string name="cfp02a">Clients counsel for FP in Peads OPD</string>
    <string name="cfp02b">Not Reported</string>
    <string name="cfp03">Clients counsel for FP in Immunization room</string>
    <string name="cfp03a">Clients counsel for FP in Immunization room</string>
    <string name="cfp03b">Not Reported</string>
</resources>