<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <!--<variable name="form"
            type="edu.aku.hassannaqvi.sk.models.Form" />-->

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.smk_rsd.ui.Section07Activity" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/GrpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- secsix  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVsecsix"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/secsix" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- cfp01  CheckBox   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVcfp01"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_cfp01" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/cfp01" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cfp01check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/cfp01a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cfp01a" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/cfp01ax"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cfp01a"
                            android:inputType="number"
                            android:maxLength="4"
                            android:tag="cfp01a"
                            android:text='@{cfp01a.checked ? cfp01ax.getText().toString() : ""}'

                            android:visibility='@{cfp01a.checked? View.VISIBLE : View.GONE}'
                            app:maxValue="9999"
                            app:type="range" />

                        <CheckBox
                            android:id="@+id/cfp01b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cfp01b" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- cfp02  CheckBox   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVcfp02"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_cfp02" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/cfp02" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cfp02check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/cfp02a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cfp02a" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/cfp02ax"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cfp02a"
                            android:inputType="number"
                            android:maxLength="4"
                            android:tag="cfp02a"
                            android:text='@{cfp02a.checked ? cfp02ax.getText().toString() : ""}'

                            android:visibility='@{cfp02a.checked? View.VISIBLE : View.GONE}'
                            app:maxValue="9999"
                            app:type="range" />

                        <CheckBox
                            android:id="@+id/cfp02b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cfp02b" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- cfp03  CheckBox   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVcfp03"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_cfp03" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/cfp03" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cfp03check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/cfp03a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cfp03a" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/cfp03ax"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cfp03a"
                            android:inputType="number"
                            android:maxLength="4"
                            android:tag="cfp03a"
                            android:text='@{cfp03a.checked ? cfp03ax.getText().toString() : ""}'

                            android:visibility='@{cfp03a.checked? View.VISIBLE : View.GONE}'
                            app:maxValue="9999"
                            app:type="range" />

                        <CheckBox
                            android:id="@+id/cfp03b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cfp03b" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <!--EndButton LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@drawable/button_shape_red"
                    android:drawableTint="#ea0000"
                    android:onClick="BtnEnd"
                    android:text="Cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@drawable/button_shape_green"
                    android:drawableTint="#00ea00"
                    android:onClick="BtnContinue"
                    android:text="Save"
                    android:textColor="@color/white" />

            </LinearLayout>
            <!--EndButton LinearLayout-->


        </LinearLayout>

    </ScrollView>

</layout>