<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
        <!--<variable
            name="form"
            type="edu.aku.hassannaqvi.sk.models.Form" />-->
        <variable
            name="callback"
            type="edu.aku.hassannaqvi.smk_rsd.ui.Section04Activity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/GrpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- secthree  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVsecthree"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/secthree" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- shf01  CheckBox   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVshf01"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_shf01" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/shf01" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/shf01check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/shf01a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shf01a" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/shf01ax"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/shf01a"
                            android:inputType="number"
                            android:maxLength="4"
                            android:tag="shf01a"
                            android:text='@{shf01a.checked ? shf01ax.getText().toString() : ""}'

                            android:visibility='@{shf01a.checked? View.VISIBLE : View.GONE}'
                            app:maxValue="9999"
                            app:type="range" />

                        <CheckBox
                            android:id="@+id/shf01b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shf01b" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- shf02  CheckBox   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVshf02"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_shf02" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/shf02" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/shf02check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/shf02a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shf02a" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/shf02ax"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/shf02a"
                            android:inputType="number"
                            android:maxLength="4"
                            android:tag="shf02a"
                            android:text='@{shf02a.checked ? shf02ax.getText().toString() : ""}'

                            android:visibility='@{shf02a.checked? View.VISIBLE : View.GONE}'
                            app:maxValue="9999"
                            app:type="range" />

                        <CheckBox
                            android:id="@+id/shf02b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shf02b" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!--EndButton LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/red_overlay"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/green_overlay"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>